2016-01-22  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	Backport from mainline
	2016-01-22  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	PR target/69403
	* config/arm/thumb2.md (*thumb2_ior_scc_strict_it): Convert to
	define_insn_and_split.  Ensure operands[1] and operands[0] do not
	get assigned the same register.

2016-01-21  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	Backported from mainline
	2015-07-24  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	* config/s390/s390.c (s390_save_gprs_to_fprs): Add CFA_REGISTER
	reg note to the GPR -> FPR save instructions.

2016-01-21  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	Backport from mainline
	2016-01-08  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	PR tree-optimization/67781
	* tree-ssa-math-opts.c (find_bswap_or_nop): Zero out bytes in cmpxchg
	and cmpnop in two steps: first the ones not accessed in original
	gimple expression in a endian independent way and then the ones not
	accessed in the final result in an endian-specific way.

2016-01-20  Marek Polacek  <polacek@redhat.com>

	PR c/68513
	* match.pd ((x & ~m) | (y & m)): Only perform on GIMPLE.

2016-01-19  Sergei Trofimovich <siarheit@google.com>

	Backport from mainline
	PR other/60465
	* config/ia64/ia64.c (ia64_expand_load_address): Use gprel64
	for local symbolic operands.
	* config/ia64/predicates.md (local_symbolic_operand64): New
	predicate.

2016-01-19  Jeff Law  <law@redhat.com>

	Backport from mainline
	2016-01-12  Jeff Law  <law@redhat.com>

	PR tree-optimization/pr67755
	* tree-ssa-threadupdate.c (struct ssa_local_info_t): Add new field
	"need_profile_correction".
	(thread_block_1): Initialize new field to false by default.  If we
	have multiple thread paths through a common joiner to different
	final targets, then set new field to true.
	(compute_path_counts): Only do count adjustment when it's really
	needed.

2016-01-19  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	Backport from mainline